@@ -32,8 +32,7 @@
   pictures. With the <tt>lilypond-book</tt> utitility, you can
   integrate music into LaTeX or HTML seamlessly.  </dd>
 
-  
-  <dt>Excellent results without fiddling</dt>
+  <dt>No fiddling</dt>
 
   <dd>
    Don't waste time with tweaking the output; LilyPond gets the
@@ -43,18 +42,6 @@
   slurs and beams are sloped, <em>automatically</em>!
   </dd>
 
-  <dt>Even better than part extraction!</dt>
-
-    <dd>
-    Parts and score are made from the same source file, so every
-    change always gets into both score and parts.  (<a
-    href="howto.html#orchestral">demo</a>).  In addition, LilyPond can
-    combine staves in scores and insert cue-notes from other parts.
-    </dd>
-
-  
-
-  
   <dt>Finest classical engraving available</dt>
   <dd>
     <img src="@IMAGES@flat-design.png" align="right" alt="flat-design">
@@ -63,6 +50,15 @@
     by the finest hand-engraved music.  LilyPond output has that same
     strong and balanced look as a classical score.  (<a
     href="../about/automated-engraving/typography-features.html">Read more</a>)
+    </dd>
+
+  <dt>Even better than part extraction!</dt>
+
+    <dd>
+    Parts and score are made from the same source file, so every
+    change always gets into both score and parts.  (<a
+    href="howto.html#orchestral">demo</a>).  In addition, LilyPond can
+    combine staves in scores and insert cue-notes from other parts.
     </dd>
 
   <dt>Libre software</dt>
